--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,7 +1,4 @@
 
-
-
-<p>bonjour bonour</p>
 <!-- Loader -->
 @if (isLoaded) {
   <div id="cr-overlay" class="w-full h-full fixed top-[0] right-[0] left-[0] bottom-[0] bg-[#fff] flex items-center justify-center z-[99]">
@@ -38,6 +35,8 @@
     </section>
   }
   <router-outlet></router-outlet>
+
+  <p>junior juju</p>
   <!-- <hero-widget></hero-widget>-->
   <div class="cr-last-footer w-full py-[2px]  text-center">
     <p class="font-Poppins text-[14px] text-[#000] leading-[1.2] ">&copy; <span id="copyright_year"></span> <a href="index.html" class="text-[#2a9d8f]">SIIC</a>, Tous droits réservés.</p>
